# icp-cli

./: .gitignore  Cargo.toml  GUIDELINES.md  HANDOFF-SESSION-0.md  HANDOFF-SESSION-1.md  HANDOFF-SESSION-5.md  Makefile  PROJECT_STATUS.md  README.md  checksums.txt  index.html  install.ps1  install.sh
.github/actions/distribution/: quick-install.yml
.github/actions/distribution/apt/: action.yml
.github/actions/distribution/docker/: action.yml
.github/actions/fetch-latest-extensions/: action.yml
.github/actions/trigger-and-wait-workflow/: action.yml
.github/workflows/: ci.yml  deploy-scripts.yml  release-extension.yml  release.yml  test.yml  update-distribution-channels.yml  wit-publish.yml
.github/workflows/distribution/: apt.yml  homebrew.yml  scripts.yml
.pm/: config.toml
.pm/guidelines/: ambiguity-resolution.md  codebase-purpose.md  composite-actions.md  concise-comments.md  detailed-content-preference.md  extension-conventions.md  extension-development.md  gh-cli-sync.md  guideline-management.md  release-process.md  robust-shell.md  task-delegation.md  wit-spec-docs.md
binaries/extensions/: multiply.component.wasm
binaries/icp/: checksums.txt  icp-aarch64-apple-darwin-homebrew.sha256  icp-aarch64-apple-darwin-standard.sha256  icp-x86_64-apple-darwin-homebrew.sha256  icp-x86_64-apple-darwin-standard.sha256  icp-x86_64-pc-windows-msvc-standard.exe.sha256  icp-x86_64-unknown-linux-gnu-standard.sha256  power.component.wasm
crates/dfx-cli/: Cargo.toml
crates/dfx-cli/src/: bindings.rs  dependency.rs  dynamic_linker.rs  extension.rs  function_registry.rs  iface.rs  lib.rs  main.rs
crates/dfx-cli/wit/: world.wit
crates/dfx-core/: Cargo.toml
crates/dfx-core/src/: error.rs  lib.rs
crates/dfx-core/src/component/: function_registry.rs  linker.rs  mod.rs
crates/dfx-core/src/dependency/: mod.rs
crates/dfx-core/src/interface/: detector.rs  mod.rs
crates/dfx-core/src/manifest/: mod.rs  model.rs
crates/examples/: README.md
crates/examples/minimal/: Cargo.toml
crates/examples/minimal/src/: bindings.rs  lib.rs
crates/examples/minimal/wit/: world.wit
crates/examples/multiply/: Cargo.toml
crates/examples/multiply/src/: bindings.rs  lib.rs
crates/examples/multiply/wit/: world.wit
crates/extensions/: README.md
crates/extensions/add/: Cargo.toml
crates/extensions/build-mo/: Cargo.toml
crates/extensions/build-mo/src/: bindings.rs  lib.rs
crates/extensions/build-mo/src/ops/: build.rs
crates/extensions/build-mo/wit/: world.wit
crates/extensions/build-rs/: Cargo.toml
crates/extensions/build-rs/src/: bindings.rs  lib.rs
crates/extensions/build-rs/src/ops/: build.rs
crates/extensions/build-rs/wit/: world.wit
crates/extensions/identity/: Cargo.toml
crates/extensions/ledger/: Cargo.toml
crates/extensions/ledger/src/: bindings.rs  lib.rs
crates/extensions/ledger/wit/: world.wit
crates/extensions/multiply/: Cargo.toml
crates/extensions/network-pic/: Cargo.toml
crates/extensions/power/: Cargo.toml
crates/extensions/power/src/: bindings.rs  lib.rs
crates/extensions/power/wit/: world.wit
crates/extensions/project/: Cargo.toml
crates/extensions/project/src/: bindings.rs  lib.rs
crates/extensions/project/src/ops/: build.rs  create.rs  list.rs  mod.rs
crates/extensions/square/: Cargo.toml
crates/icp-cli/: Cargo.toml  build.rs
crates/icp-cli/src/: bindings.rs  component_invoke.rs  extension.rs  main.rs
crates/icp-cli/wit/: world.wit
crates/icp-component-invoke/: Cargo.toml
crates/icp-component-invoke/src/: lib.rs
crates/icp-core/: Cargo.toml
crates/icp-core/src/: error.rs  lib.rs
crates/icp-core/src/component/: function_registry.rs  linker.rs
crates/icp-core/src/dependency/: mod.rs
crates/icp-core/src/interface/: detector.rs  mod.rs
crates/icp-core/src/manifest/: mod.rs  model.rs
crates/icp-distribution/: Cargo.toml  README.md  build.rs
crates/icp-distribution/src/: binary.rs  distribution.rs  error.rs  lib.rs  url.rs
crates/icp-distribution/templates/: index.html.tmpl
crates/icp-distribution/templates/curl-install/: install.ps1.tmpl  install.sh.tmpl
crates/icp-distribution/templates/homebrew/: formula.rb.tmpl
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs  mock.rs  templates.rs
crates/test-utils/tests/: iface_detection.rs
docs/: GUIDELINES.md  HANDOFF-FINAL.md  PLAN.md  SUMMARY.md  WORKFLOW.md  project-summary.md
docs/archive/: HANDOFF-SESSION-2.md  HANDOFF-SESSION-3.md  HANDOFF-SESSION-6.md  README.md
docs/ci-cd/: composite-actions.md  gh-cli-sync.md  robust-shell-scripting.md
docs/explainer/: README.md  explainer-canonical-abi.md  explainer-component-definitions.md  explainer-examples.md  explainer-grammar.md  explainer-js-embedding.md  explainer-overview.md  explainer-type-system.md  explainer-values-and-imports.md
docs/personas/: ARCHITECT.md  CONCEPT_PROVER.md  IMPLEMENTER.md  PROJECT_MANAGER.md  QA_TESTER.md  README.md
docs/projects/core-extraction/: PLAN.md  PROJECT.md  PROJECT_STATUS.md
docs/projects/distribution/: PROJECT.md
docs/projects/extension-ipc/: COMPLETION.md  PROJECT.md  PROJECT_STATUS.md
docs/projects/process/: PROJECT.md
docs/projects/windows-support/: PROJECT.md
docs/wit-spec/: README.md  built-in-types.md  feature-gates.md  filesystem-structure.md  functions.md  handles.md  identifiers.md  interfaces.md  lexical-structure.md  name-resolution.md  package-format.md  package-names.md  packages-and-use.md  type-definitions.md  worlds.md
scripts/: order_wit_packages.py  release-cli.sh  release-extension.sh  set_workspace_version.py
src/: dependency.rs  dynamic_linker.rs  extension.rs  function_registry.rs  iface.rs  library.rs  main.rs  manifest.rs  spec.rs
tmp/: Cargo.toml  JOURNAL.md  PLAN.md  SUMMARY.md
tmp/src/: auto_linker.rs  main.rs
wit/: README.md  world.wit
wit/cli/: cli.wit  command.wit  component.wit  filesystem.wit  misc.wit
wit/extensions/build-mo/: build-mo.wit
wit/extensions/identity/: identity.wit
wit/extensions/network/: network.wit
wit/extensions/project/: project.wit
(+115 files in other folders)
