[workspace]
resolver = "2"

members = [
    "crates/icp-cli",
    "crates/icp-core",
    "crates/extensions/*",
    "crates/test-utils",
    "crates/icp-distribution",
]

default-members = [
    "crates/icp-cli",
    "crates/icp-core",
    "crates/icp-distribution",
]

[workspace.dependencies]
# Core dependencies
anyhow = "1.0.96"
async-trait = "0.1.86"
clap = { version = "4.5.30", features = ["derive", "string"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
wasmtime = { version = "31.0.0", features = ["component-model"] }

# HTTP and networking
http = "1.2.0"
reqwest = "0.12.12"

# Utilities
dashmap = "6.1.0"
dirs = "6.0.0"
once_cell = "1.20.3"
thiserror = "2.0.11"

# Security
ring = "0.17.12"

# Development dependencies
tokio-test = "0.4"
tempfile = "3.5.0"
handlebars = "4.3.5"

# WASM/Component dependencies
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }
