[workspace]
resolver = "2"
members = [ "crates/icp-cli", "crates/icp-core", "crates/extensions/*", "crates/examples/*", "crates/test-utils", "crates/icp-distribution",]
default-members = [ "crates/icp-cli", "crates/icp-core", "crates/icp-distribution",]

[workspace.package]
version = "0.1.7"

[workspace.dependencies]
anyhow = "1.0.96"
async-trait = "0.1.86"
serde_json = "1.0.139"
http = "1.2.0"
reqwest = "0.12.12"
dashmap = "6.1.0"
dirs = "6.0.0"
once_cell = "1.20.3"
thiserror = "2.0.11"
ring = "0.17.12"
sha2 = "0.10.8"
tokio-test = "0.4"
tempfile = "3.5.0"
handlebars = "4.3.5"

[workspace.dependencies.clap]
version = "4.5.30"
features = [ "derive", "string", "env",]

[workspace.dependencies.serde]
version = "1.0.218"
features = [ "derive",]

[workspace.dependencies.tokio]
version = "1.43.0"
features = [ "full",]

[workspace.dependencies.wasmtime]
version = "32.0.0"
features = [ "component-model",]

[workspace.dependencies.wit-bindgen-rt]
version = "0.41.0"
features = [ "bitflags",]
