[workspace]
resolver = "2"
members = [
    "crates/icp-cli",
    "crates/icp-core",
    "crates/icp-component-invoke",
    "crates/extensions/*",
    "crates/examples/*",
    "crates/test-utils",
    "crates/icp-distribution",
]
default-members = [
    "crates/icp-cli",
    "crates/icp-core",
    "crates/icp-distribution",
]

[workspace.package]
version = "0.1.19"

[workspace.dependencies]
anyhow = "1.0.96"
async-trait = "0.1.86"
dashmap = "6.1.0"
dirs = "6.0.0"
glob = "0.3.2"
handlebars = "6.3.2"
http = "1.2.0"
once_cell = "1.20.3"
reqwest = "0.12.12"
ring = "0.17.12"
serde_json = "1.0.139"
sha2 = "0.10.8"
tempfile = "3.5.0"
thiserror = "2.0.11"
tokio-test = "0.4"
toml = "0.8.21"

[workspace.dependencies.clap]
version = "4.5.30"
features = ["derive", "string", "env"]

[workspace.dependencies.serde]
version = "1.0.218"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.43.0"
features = ["full"]

[workspace.dependencies.wasmtime]
version = "32.0.0"
features = ["component-model"]

[workspace.dependencies.wit-bindgen-rt]
version = "0.41.0"
features = ["bitflags"]
