[package]
name = "icp-cli"
version = "0.1.5"
edition = "2021"
description = "Internet Computer utility with WASM extensions support"
license = "MIT"

[[bin]]
name = "icp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.96"
async-trait = "0.1.86"
clap = { version = "4.5.30", features = ["derive", "string"] }
dashmap = "6.1.0"
icp-core = { path = "../icp-core" }
dirs = "6.0.0"
http = "1.2.0"
once_cell = "1.20.3"
reqwest = "0.12.12"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
wasmtime = "31.0.0"
