[package]
name = "icp-cli"
version = "0.1.5"
edition = "2021"
description = "Internet Computer utility with WASM extensions support"
license = "MIT"

[[bin]]
name = "icp"
path = "src/main.rs"

[build-dependencies]
icp-distribution = { path = "../icp-distribution" }

[dependencies]
anyhow = { workspace = true }
icp-distribution = { path = "../icp-distribution" }
async-trait = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
icp-core = { path = "../icp-core" }
dirs = { workspace = true }
http = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
wasmtime = { workspace = true }
