[package]
name = "icp-core"
version = "0.1.0"
edition = "2021"
description = "Core functionality for icp component model tools"
license = "MIT"

[dependencies]
anyhow = "1.0.96"
async-trait = "0.1.86"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
wasmtime = { version = "31.0.0", features = ["component-model"] }

[dev-dependencies]
test-utils = { path = "../test-utils" }
tokio = { version = "1.36.0", features = ["full"] } # For async tests
