[package]
name = "icp-core"
version = "0.1.0"
edition = "2021"
description = "Core functionality for icp component model tools"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
wasmtime = { workspace = true }

[dev-dependencies]
test-utils = { path = "../test-utils" }
tokio = { workspace = true }
