[package]
name = "icp-distribution"
version = "0.1.0"
edition = "2021"
description = "Distribution tools for the ICP CLI"
authors = ["ICP Team"]
license = "MIT"

[dependencies]
handlebars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
handlebars = { workspace = true }
