[package]
name = "icp-distribution"
version.workspace = true
edition = "2021"
description = "Distribution tools for the ICP CLI"
authors = ["ICP Team"]
license = "MIT"

[dependencies]
clap = { workspace = true }
handlebars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
