[package]
name = "minimal"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
clap = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
wit-bindgen-rt = { workspace = true }

[package.metadata.component]
package = "icp:minimal"

[package.metadata.component.target.dependencies]
"icp:cli" = "0.3.0"
