[package]
name = "multiply"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:project"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"icp:cli" = "0.0.1"
