[package]
name = "build-mo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
once_cell.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "icp:build-mo"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"icp:build" = "0.6.13"
"icp:cli" = "0.3.4"
