[package]
name = "build-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "icp:build-rs"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"icp:build" = "0.6.9"
"icp:cli" = "0.3.2"
