[package]
name = "ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.30", features = ["cargo", "derive", "string"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:project"

[package.metadata.component.dependencies]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
