[package]
name = "project"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:project"
target = "icp:project/extension@0.0.1"

[package.metadata.component.dependencies]
