[package]
name = "project"
version = "0.1.3"
edition = "2024"

[dependencies]
clap = { workspace = true }
glob = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:project"
target = "icp:project/extension@0.5.0"

[package.metadata.component.dependencies]
